src/tests/testfiles/variable-declarations/9.txt
Error at 5:5: Incompatible types when assigning to type 'char' from type 'char[]'
*hello = "uu"; // error
^
